--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         }
         .dollar{
           color:#FABE4C;
+          font-size: 24px;
+        }
+        .btm-thambnel{
+          width: 80px;
+        }
+        .btm-item{
+          border-radius: 20px;
         }
     </style>
 </head>
@@ -67,15 +74,15 @@
     <main>
       <section class="bg-color">
         <div class="container">
-          <div class="row">
-              <div class="col-lg-6 col-md-6 col-12 order-lg-1 d-flex justify-contact-center align-items-center my-5">
+          <div class="row  text-lg-start text-md-start text-center">
+              <div class="col-lg-6 col-md-6 col-12 order-lg-1 order-md-1 d-flex justify-contact-center align-items-center my-5">
                 <div>
-                    <h1 class="display-1 text-uppercase  heading-fs external-font"><span class="top-heading-color">Be the Penguins</span> <br> of Winter</h1>
+                    <h1 class="display-1 text-uppercase heading-fs external-font"><span class="top-heading-color">Be the Penguins</span> <br> of Winter</h1>
                     <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem, ipsum dolor sit</p>
                     <button type="button" class="btn btn-design text-white btn-lg px-4 py-3 fs-5 border-0 rounded"><i class="fas fa-shopping-cart"></i> BUY NOW</button>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-6 col-12 order-lg-2 order-first d-flex justify-contact-center align-items-center">
+              <div class="col-lg-6 col-md-6 col-12 order-lg-2 order-md-1 order-first d-flex justify-contact-center align-items-center">
                   <img width="600px" class="img-fluid" src="images/profile.png" alt="">
               </div>
           </div>
@@ -187,40 +194,43 @@
           </div>
         </div>
       </section>
-      <section class="container mt-5">
+      <section class="container my-5">
         <div class="row">
-          <div class="col-lg-6 col-md-12">
-            <div>
+          <div class="col-lg-6 col-md-12 order-lg-2">
+            <div class="mb-4 ms-3">
               <img class="img-fluid" src="images/shopping.png" alt="">
             </div>
           </div>
-          <div class="col-lg-6 col-md-12">
-            <div class="vh-50">
-              <div class="d-flex justify-content-center align-items-center">
+          <div class="col-lg-6 col-md-12 order-lg-1">
+            <div>
+              <div class="d-lg-flex d-md-flex text-lg-start text-md-start text-center justify-content-center align-items-center shadow-sm p-2 btm-item mb-4">
                 <div>
-                  <img class="img-fluid" src="images/house.png" alt="">
+                  <img class="img-fluid btm-thambnel" src="images/house.png" alt="">
                 </div>
-                <div>
+                <div class="p-3">
                   <h4>Find the perfect fit</h4>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatem nulla est.</p>
+                  <p>Everybody is different, which is why we
+                    offer styles for every body.</p>
                 </div>
               </div>
-              <div class="d-flex justify-content-center align-items-center">
+              <div class="d-lg-flex d-md-flex text-lg-start text-md-start text-center justify-content-center align-items-center shadow-sm p-2 btm-item mb-4">
                 <div>
-                  <img class="img-fluid" src="images/box.png" alt="">
+                  <img class="img-fluid btm-thambnel" src="images/box.png" alt="">
                 </div>
-                <div>
-                  <h4>Find the perfect fit</h4>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatem nulla est.</p>
+                <div class="p-3">
+                  <h4>Free Exchanges</h4>
+                  <p>One of the many reasons you can shop
+                    with peace of mind. That's it. </p>
                 </div>
               </div>
-              <div class="d-flex justify-content-center align-items-center">
+              <div class="d-lg-flex d-md-flex text-lg-start text-md-start text-center justify-content-center align-items-center shadow-sm p-2 btm-item mb-4">
                 <div>
-                  <img class="img-fluid" src="images/question.png" alt="">
+                  <img class="img-fluid btm-thambnel" src="images/question.png" alt="">
                 </div>
-                <div>
-                  <h4>Find the perfect fit</h4>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatem nulla est.</p>
+                <div class="p-3">
+                  <h4>Contact Our Seller</h4>
+                  <p>They are here to help you. That's quite 
+                    literally what we pay them for.</p>
                 </div>
               </div>
             </div>
@@ -229,7 +239,7 @@
       </section>
     </main>
     <footer>
-
+      <p class="text-center">© All right resurved to Panguin Fashion 2022.</p>
     </footer>
     <script src="bootstrap common file/js/bootstrap.bundle.min.js"></script>
 </body>
